<resources>
    <string name="app_name">Radiometer</string>
    <string name="sound">Включить звук</string>
    <!--<string name="led_two">Светодиод 2</string>-->
    <string name="sensor">Подключите устройство</string>
    <string name="unit">µSv/h</string>
    <string name="start_again_search">Повторить поиск</string>
    <string name="start_measure">Начать измерение</string>
    <string name="reset">Сброс</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="lim">Тревоги выключены</string>
    <string name="sound_">Звуковая индикация частиц</string>
    <string name="low_battery">Батарея разряжена</string>
    <string name="_0">0</string>
    <string name="search_mode">Поиск</string>
    <string name="measure_mode">Измерение</string>
</resources>
