<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="vslv.code.radiometer.MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:clickable="true"
        android:focusable="true"
        android:gravity="top|bottom"
        android:text="@string/unit"
        android:textAlignment="center"
        android:textSize="36sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|bottom"
        android:text="@string/sensor"
        android:textAlignment="center"
        android:textColor="#e3e3e3"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|bottom"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:focusable="auto">

            <TextView
                android:id="@+id/signal"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:layout_weight="1"
                android:background="@drawable/back"
                android:gravity="top|bottom"
                android:text="@string/lim"
                android:textAlignment="center"
                android:textColor="#970404"
                android:textSize="24sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/sig_alert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/back"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textColor="#085900"
                android:textSize="36sp"
                android:visibility="invisible" />
        </LinearLayout>

        <Space
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/sound"
            android:layout_width="wrap_content"
            android:layout_height="112dp"
            android:layout_weight="1"
            android:background="@drawable/back"
            android:clickable="true"
            android:focusable="true"
            android:gravity="top|bottom"
            android:text="@string/sound_"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#970404"
            android:textSize="24sp"
            android:visibility="invisible" />
    </LinearLayout>

    <!--<Button-->
        <!--android:id="@+id/start_measure"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/start_measure" />-->

    <!--<Button-->
        <!--android:id="@+id/start_again_search"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/start_again_search"-->
        <!--android:visibility="invisible" />-->

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="top|bottom"
        android:text="@string/low_battery"
        android:textAlignment="center"
        android:textColor="#970404"
        android:textSize="24sp"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/meas_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/meas_hint"
            android:layout_width="match_parent"
            android:layout_height="51dp"

            android:gravity="bottom"
            android:textAlignment="center"
            android:textSize="30sp"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="134dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/meas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="top|bottom"
                android:text="@string/start_measure"
                android:textAlignment="center"
                android:textSize="36sp"
                android:visibility="invisible" />

        </LinearLayout>

    </LinearLayout>


    <!--<Button-->
    <!--android:id="@+id/btLedTwo"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/led_two" />-->

</LinearLayout>
